<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="about_maliang">码良简介</string>
    <string name="bottom_note">日记</string>
    <string name="bottom_find">发现</string>
    <string name="bottom_contact">通讯录</string>
    <string name="bottom_me">我</string>
    <string name="my_barcode">我的二维码</string>
    <string name="barcode_mail">发送到邮箱</string>
    <string name="barcode_name">倾城笛歌</string>
    <string name="barcode_sign">走不进的世界就不要</string>
    <string name="barcode_save">保存</string>
    <string name="contact_friend_info_title">个人资料</string>
    <string name="friend_info_sign">个性签名</string>
    <string name="friend_info_name">张三</string>
    <string name="friend_info_beizhuming">备注名</string>
    <string name="friend_info_nickname">张三</string>
    <string name="friend_info_xingbie">性别</string>
    <string name="friend_info_sex">男</string>
    <string name="friend_info_diqu">地区</string>
    <string name="friend_info_area">浙江 杭州</string>
    <string name="friend_info_shengri">生日</string>
    <string name="friend_info_birthday">2015-11-15</string>
    <string name="friend_info_sendmessage">发送消息</string>
    <string name="contact_friend_search">搜索好友</string>
    <string name="contact_group_add">选择好友</string>
    <string name="group_add_ok">完成</string>
    <string name="contact_group_edit_title">多人笔记本</string>
    <string name="group_edit_update">编辑</string>
    <string name="set_note_msg">设置笔记信息</string>
    <string name="myname_in_note">我在笔记昵称</string>
    <string name="report">举报</string>
    <string name="quit_group">退出笔记本</string>
    <string name="friend_list_name">张三</string>
    <string name="friend_list_title">我的好友</string>
    <string name="grid_tv">文字</string>
    <string name="group_info_edit_title">笔记信息设置</string>
    <string name="group_set_head">头像</string>
    <string name="group_set_name">名称</string>
    <string name="group_set_rijima">日记码</string>
    <string name="group_set_bgm">背景音乐</string>
    <string name="group_set_sign">日记签名</string>
    <string name="group_set_cover">更换封面</string>
    <string name="group_set_showname">倾城笛歌</string>
    <string name="group_set_showbgm">LINKEN PARK</string>
    <string name="group_set_showsign">第一篇日记</string>
    <string name="group_set_limit">设置权限</string>
    
    <string name="input_code">短信校验码</string>

</resources>