<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/contact_friend_msg_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#049CDB"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact_friend_info_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/contact_friend_msg_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:src="@drawable/previous" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/friend_msg"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/friend_info_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/friend_info_name"
            android:layout_below="@+id/friend_info_name"
            android:layout_marginTop="8dp"
            android:text="@string/friend_info_sign"
            android:textColor="#949499"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/friend_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/friend_info_head"
            android:text="@string/friend_info_name"
            android:textColor="#444444"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/friend_info_head"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_user_img" />

        <ImageView
            android:id="@+id/friend_info_sex_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/friend_info_name"
            android:src="@drawable/icon_male" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/friend_name"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:id="@+id/beizhuming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/friend_info_beizhuming"
            android:textColor="#444444"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/friend_info_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/img"
            android:text="@string/friend_info_nickname"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/friend_sex"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#ffffff" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:id="@+id/xingbie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/friend_info_xingbie"
            android:textColor="#444444"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/friend_info_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/xingbie"
            android:text="@string/friend_info_sex"
            android:textColor="#444444"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/friend_area"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#ffffff" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:id="@+id/diqu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/friend_info_diqu"
            android:textColor="#444444"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/friend_info_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/diqu"
            android:text="@string/friend_info_area"
            android:textColor="#444444"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/friend_birthday"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#ffffff" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:id="@+id/shengri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/friend_info_shengri"
            android:textColor="#444444"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/friend_info_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/shengri"
            android:text="@string/friend_info_birthday"
            android:textColor="#444444"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/send_message"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#049CDB"
            android:text="@string/friend_info_sendmessage"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>