<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_msg_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/tab_note_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#049CDB"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/group_info_edit_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/note_msg_edit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:src="@drawable/previous" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_set_head"
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:background="#ffffff"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/group_set_showhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/note_set_img1"
            android:src="@drawable/icon_note_header" />

        <ImageView
            android:id="@+id/note_set_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/group_set_head"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/group_set_name"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/group_set_name"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:id="@+id/group_set_showname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/img2"
            android:text="@string/group_set_showname"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/group_set_code"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/group_set_showcode"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/note_set_img3"
            android:src="@drawable/icon_erweima" />

        <ImageView
            android:id="@+id/note_set_img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/group_set_rijima"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/group_set_bgm"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <TextView
            android:id="@+id/group_set_showbgm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/img4"
            android:text="@string/group_set_showbgm"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/group_set_bgm"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/group_set_sign"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:clickable="true" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/group_set_sign"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:id="@+id/group_set_showsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/img5"
            android:text="@string/group_set_showsign"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/group_set_cover"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#ffffff"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/group_set_showcover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/note_set_img1"
            android:src="@drawable/icon_note_header" />

        <ImageView
            android:id="@+id/note_set_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/group_set_cover"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/group_set_limit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line_bg" >

        <ImageView
            android:id="@+id/img6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/group_set_limit"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

</LinearLayout>