<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/tab_note_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#049CDB"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/group_edit_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:text="@string/group_edit_update"
            android:textColor="#fff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact_group_edit_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/group_edit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:src="@drawable/previous" />
    </RelativeLayout>

    <GridView
        android:id="@+id/contact_add_to_group"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center_horizontal"
        android:horizontalSpacing="5dp"
        android:minHeight="90dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" >
    </GridView>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <RelativeLayout
            android:id="@+id/set_note_msg"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#ffffff" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/set_note_msg"
                android:textColor="#555555"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <RelativeLayout
            android:id="@+id/myname_in_note"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#ffffff" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E2E2E2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/myname_in_note"
                android:textColor="#555555"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <RelativeLayout
            android:id="@+id/report"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#ffffff" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/report"
                android:textColor="#555555"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2" />

    <Button
        android:id="@+id/quit_group"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="#DD524D"
        android:text="@string/quit_group" />

</LinearLayout>